phone display fixed
- phone display was cutting off the bottom of the buttons
- fixed it so that the buttons are displayed properly and do not get cut off
- removed debug line from anim testing

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
     display: none;
     flex-direction: column;
     position: absolute;
-    bottom: 1vh;
+    bottom: 0vh;
     width: -webkit-fill-available;
     z-index: 1;
     margin: 0% 10%;
